name: google-calendar
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 brady.ouren <brady.ouren@gmail.com>
maintainer: brady.ouren <brady.ouren@gmail.com>
synopsis: haskell bindings to the google calendar api
description: haskell bindings to the google calendar api
category: Web
author: brady.ouren <brady.ouren@gmail.com>
tested-with: GHC ==7.8 GHC ==7.6
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/tippenein/google-calendar

library
  exposed-modules: Web.Google.Calendar
  hs-source-dirs: src
  build-depends:
      base           >= 4.7 && < 5
    , aeson
    , bytestring     == 0.10.*
    , either         == 4.4.*
    , servant        == 0.4.*
    , servant-client == 0.4.*
    , text           == 1.2.*
  default-language: Haskell2010
  ghc-prof-options: -auto-all -prof
  ghc-options: -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base -any
    , google-calendar -any
    , hspec ==2.*
    , HUnit -any
  default-language:    Haskell2010
  other-modules:
      Web.Google.Calendar
      Web.Google.CalendarSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
